--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
     "@heroicons/vue": "^2.1.3",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-advanced-chat": "^2.1.0",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
@@ -27,7 +35,6 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "sass": "^1.75.0",
-    "tailwindcss": "^3.4.3",
     "vite": "^5.2.8"
   }
 }
